syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcDemoService";

package authentication;

service Authentication {
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationReply);
  rpc GetAuthState (google.protobuf.Empty) returns (AuthStateReply);
}

message AuthenticationRequest {
  string userName = 1;
  string userPassword = 2;
}

message AuthenticationReply {
  string accessToken = 1;
  int32 expiresIn = 2;
}

message AuthStateReply {
  string userId = 1;
  string userName = 2;
  string roles = 3;
  google.protobuf.Timestamp issuedAtUtc = 4;
  google.protobuf.Timestamp notBeforeUtc = 5;
  google.protobuf.Timestamp expiresUtc = 6;
}
