syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcDemoService";

package product;

service Product {
  rpc SaveProduct (ProductModel) returns (ProductSaveReply);
  rpc GetProducts (google.protobuf.Empty) returns (ProductListReply);
}

message ProductListReply {
  repeated ProductModel Products = 1;
}

message ProductModel {
  string productName = 1;
  string productCode = 2;
  double price = 3;
  google.protobuf.Timestamp stockDate = 4;
}

message ProductSaveReply {
  int32 statusCode = 1;
  bool isSuccessful = 2;
}
